imprint, switch to mailpartner

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,1 +1,14 @@
-<p>imprint works!</p>
+<div class="cont-impressum"  (click)=back()>
+<h1>Impressum</h1>
+
+<h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+<p>Katja Dr. Becker-Lindhorst<br />
+Kirchenstr.13<br />
+82194 Groebenzell</p>
+
+<h2>Kontakt</h2>
+<p>Telefon: 0160-94780639<br />
+E-Mail: dr.katja.becker-lindhorst@t-online.de</p>
+
+<p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
+</div>
